packages/cashc/test/compiler/ParseError/for_loop_missing_init.cash
contract ForLoopMissingInit() {
    function spend() {
        int i = 0;

        for (; i < 3; i = i + 1) {
            i = i + 1;
        }

        require(i == 3);
    }
}
